force-app/main/default/objects/Marketingattributes__c/Marketingattributes__c.object-meta.xml
<CustomObject>
    <description>Objekt zur Aufnahme der Marketingattribute für Kontakte</description>
    <label>EU-Marketingattribut</label>
    <nameField>
        <displayFormat>MA-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketingattribute</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>