force-app/main/default/objects/Marketingattributes__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Subgroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aesculap</fullName>
            </value>
            <value>
                <fullName>Corin</fullName>
            </value>
            <value>
                <fullName>DePuy Synthes</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Mathys</fullName>
            </value>
            <value>
                <fullName>Medacta</fullName>
            </value>
            <value>
                <fullName>Medtronic</fullName>
            </value>
            <value>
                <fullName>Smith &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Symbios</fullName>
            </value>
            <value>
                <fullName>Tornier</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>