force-app/main/default/objects/Marketingattributes__c/fields/Own_Designation__c.field-meta.xml
<CustomField>
    <fullName>Own_Designation__c</fullName>
    <label>Zimmer Bezeichnung</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Subgroup__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>Allegretto</fullName>
            </value>
            <value>
                <fullName>Allgemeine Instrumente</fullName>
            </value>
            <value>
                <fullName>Alloclassic Pfanne</fullName>
            </value>
            <value>
                <fullName>Alloclassic Schaft</fullName>
            </value>
            <value>
                <fullName>Allofit</fullName>
            </value>
            <value>
                <fullName>Anatomical</fullName>
            </value>
            <value>
                <fullName>Astrid Fusssystem</fullName>
            </value>
            <value>
                <fullName>ATS 1200</fullName>
            </value>
            <value>
                <fullName>ATS 3000</fullName>
            </value>
            <value>
                <fullName>Avenir</fullName>
            </value>
            <value>
                <fullName>Batory</fullName>
            </value>
            <value>
                <fullName>Biolox forte</fullName>
            </value>
            <value>
                <fullName>Bioplug bioresorb.</fullName>
            </value>
            <value>
                <fullName>Bipolar AP</fullName>
            </value>
            <value>
                <fullName>Brunswick</fullName>
            </value>
            <value>
                <fullName>Burch-Schneider</fullName>
            </value>
            <value>
                <fullName>Cable Ready</fullName>
            </value>
            <value>
                <fullName>CDH 22mm</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Cemlock</fullName>
            </value>
            <value>
                <fullName>Cerasul</fullName>
            </value>
            <value>
                <fullName>CLS Schaft</fullName>
            </value>
            <value>
                <fullName>CLS-Spreizschale</fullName>
            </value>
            <value>
                <fullName>Copi OS</fullName>
            </value>
            <value>
                <fullName>CSF-Gamma Pfanne</fullName>
            </value>
            <value>
                <fullName>Cuffs - Disposable</fullName>
            </value>
            <value>
                <fullName>Cuffs - Reusable</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>DTO Implantat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>