force-app/main/default/objects/Marketingattributes__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hüfte</fullName>
            </value>
            <value>
                <fullName>Knie</fullName>
            </value>
            <value>
                <fullName>Extremitäten</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>