force-app/main/default/objects/Marketingattributes__c/fields/Subgroup__c.field-meta.xml
<CustomField>
    <fullName>Subgroup__c</fullName>
    <label>Untergruppe</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Köpfe</fullName>
            </value>
            <value>
                <fullName>Markraumsperre</fullName>
            </value>
            <value>
                <fullName>Pfannensysteme</fullName>
            </value>
            <value>
                <fullName>Schaftsysteme</fullName>
            </value>
            <value>
                <fullName>Kniesysteme</fullName>
            </value>
            <value>
                <fullName>Extremitäten</fullName>
            </value>
            <value>
                <fullName>Support Systems</fullName>
            </value>
            <value>
                <fullName>Fusion Systems</fullName>
            </value>
            <value>
                <fullName>Non Fusion Systems</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Knochenersatz</fullName>
            </value>
            <value>
                <fullName>Interessen</fullName>
            </value>
            <value>
                <fullName>Kataloge</fullName>
            </value>
            <value>
                <fullName>Preislisten</fullName>
            </value>
            <value>
                <fullName>Retraktoren</fullName>
            </value>
            <value>
                <fullName>Pulsavac</fullName>
            </value>
            <value>
                <fullName>ATS</fullName>
            </value>
            <value>
                <fullName>Cement &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Skin Graft Products</fullName>
            </value>
            <value>
                <fullName>Power Tools</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>