force-app/main/default/objects/Marketingattributes__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Segment__c</columns>
    <columns>Subgroup__c</columns>
    <columns>Own_Designation__c</columns>
    <columns>Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>de</language>
</ListView>